@@ -471,4 +471,8 @@ class LocalJobRunner implements JobSubmissionProtocol {
     return null;
   }
 
+  @Override
+  public QueueAclsInfo[] getQueueAclsForCurrentUser() throws IOException{
+    return null;
+}
 }
